[tool.poetry]
name = "cat-feeder-api"
version = "0.1.0"
description = "api for cat feeder home automation project"
authors = ["Adriano Dramisino <adriano.dramisino@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-smorest = "^0.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
